--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aurelia-http-client": "^1.2.1",
     "bluebird": "^3.4.1",
     "cloudinary": "^1.9.1",
+    "file-system": "^2.2.2",
     "form-data": "^2.3.1",
     "hapi-cors-headers": "^1.0.3",
     "requirejs": "^2.3.2",
