--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "???"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node index"
   },
   "license": "MIT",
   "dependencies": {
